--- a/mqtt_edge/templates/index.html
+++ b/mqtt_edge/templates/index.html
@@ -3,144 +3,151 @@
 
 {% block styles %}
 {{ super() }}
+<style>
+  pre {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  }
+</style>
 {% endblock %}
 
 {% block scripts %}
 {{ super() }}
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+<script src="https://cdn.bootcss.com/socket.io/2.2.0/socket.io.js"></script>
 <script type="text/javascript" charset="utf-8">
+
   $(document).ready(function() {
-    var socket = io.connect('http://' + document.domain + ':' + location.port);
-
-    $('#publish').click(function(event) {
-      var topic = $('#topic').val();
-      var message = $('#message').val();
-      var qos = $('#qos').val();
-      var data = '{"topic": "' + topic + '", "message": "' + message + '", "qos": ' + qos + '}';
-      socket.emit('publish', data=data);
-    });
-
-    $('#subscribe').click(function(event) {
-      var topic = $('#subscribe_topic').val();
-      var qos = $('#subscribe_qos').val();
-      var data = '{"topic": "' + topic + '", "qos": ' + qos + '}';
-      socket.emit('subscribe', data=data);
-      $('#subscribe').hide();
-      $('#unsubscribe').show();
-      $('#subscribe_topic').prop('readonly', true);
-    });
-
-    $('#unsubscribe').click(function(event) {
-      socket.emit('unsubscribe_all');
-      $('#subscribe').show();
-      $('#unsubscribe').hide();
-      $('#subscribe_topic').prop('readonly', false);
-    });
-
-    socket.on('mqtt_message', function(data) {
-      console.log(data);
-      var text = '(' + data['topic'] + ' qos: ' + data['qos'] + ') ' + data['payload'];
-      var $textarea = $('#subscribe_messages');
-      $textarea.val($textarea.val() + text + '\n');
+  
+    $('#edge_create').click(function(event){
+      var term_sn = $('#term_sn').val()
+      var term_config = $('#term_config').val()
+      $.post('/edge/term_sn', {'term_sn': term_sn, 'term_config': term_config}, function(res){
+		  edge_log(res)
+      })
     })
+
+    $('#edge_register').click(function(event){
+      var term_sn = $('#term_sn').val()
+      $.post('/edge/register', {'term_sn': term_sn}, function(res){
+		  edge_log(res)
+      })
+    })
+    $('#edge_report').click(function(event){
+      var term_sn = $('#term_sn').val()
+      $.post('/edge/report', {'term_sn': term_sn}, function(res){
+		  edge_log(res)
+      })
+    })
+
+    $('#cloud_start').click(function(event){
+      $.get('/cloud/client', function(res){
+		  cloud_log(res)
+      })
+    })
+
+    $('#cloud_add_edge').click(function(event){
+      var term_sn = $('#term_sn_new').val()
+      var term_config = $('#term_config_new').val()
+      $.post('/cloud/term_sn', {'term_sn': term_sn, 'config': term_config}, function(res){
+		  cloud_log(res)
+      })
+    })
+
+    $('#cloud_delete_edge').click(function(event){
+      var term_sn = $('#term_sn_new').val()
+		$.ajax({
+		  url: '/cloud/term_sn',
+		  type: 'DELETE',
+		  data: {'term_sn': term_sn},
+			success: function(res){
+				cloud_log(res)
+			}
+		});
+    })
+
+    $('#cloud_cmd').click(function(event){
+      var term_sn = $('#term_sn_new').val()
+      $.post('/cloud/cmd', {'term_sn': term_sn}, function(res){
+		  cloud_log(res)
+      })
+    })
+
   });
+
+  function cloud_log(res){
+    var t = res + '\n' + $("#cloud_log").text();
+    $("#cloud_log").html(t);
+  }
+  function edge_log(res){
+    var t = res + '\n' + $("#edge_log").text();
+    $("#edge_log").html(t);
+  }
 </script>
 {% endblock %}
 
+
 {% block content %}
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-xs-12">
-      <h1>Flask-MQTT Example</h1>
+<div style='width: 80%;margin: 10px auto;'>
+<div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">
+        edge操作
+      </h3>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-6">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h3 class="panel-title">Publish MQTT Message</h3>
-        </div>
-        <div class="panel-body">
-          <div class="col-xs-12">
-            <div class="row">
-              <div class="form-horizontal">
-                <div class="form-group">
-                  <label class="control-label col-xs-4">Topic: </label>
-                  <div class="col-xs-8">
-                    <input id="topic" class="form-control">
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label class="control-label col-xs-4">Message: </label>
-                  <div class="col-xs-8">
-                    <input id="message" class="form-control">
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label class="control-label col-xs-4">Qos: </label>
-                  <div class="col-xs-8">
-                    <select id="qos" class="form-control">
-                      <option value=0>0</option>
-                      <option value=1>1</option>
-                      <option value=2>2</option>
-                    </select>
-                  </div> 
-                </div>
-                <div class="form-group">
-                  <div class="col-xs-8 col-xs-offset-4">
-                    <button id="publish" class="btn btn-primary">Publish</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+    <div class="panel-body">
+      <div class="form-group">
+        <label for="term_sn"> term_sn: </label>
+        <input type="text" class="form-control" id="term_sn">
+        <label for="term_config"> term_config: </label>
+        <input type="text" class="form-control" id="term_config">
+      </div>
+      <div class="form-group">
+        <button id="edge_create" class="btn btn-primary">启动edge设备</button>
+        <button id="edge_register" class="btn btn-primary">edge设备注册</button>
+        <button id="edge_report" class="btn btn-primary">edge上报事件</button>
+      </div>
+
+    </div>
+</div>
+
+<div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">
+        cloud 操作
+      </h3>
+    </div>
+    <div class="panel-body">
+      <div class="form-group">
+        <label for="term_sn_new"> term_sn: </label>
+        <input type="text" class="form-control" id="term_sn_new">
+        <label for="term_config_new"> term_config: </label>
+        <input type="text" class="form-control" id="term_config_new">
+      </div>
+      <div class="form-group">
+        <button id="cloud_start" class="btn btn-primary">启动云端</button>
+        <button id="cloud_add_edge" class="btn btn-primary">添加edge设备到数据库</button>
+        <button id="cloud_delete_edge" class="btn btn-primary">删除edge设备</button>
+        <button id="cloud_cmd" class="btn btn-primary">云端下发指令</button>
+      </div>
+
+    </div>
+</div>
+
+<div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">
+      日志打印：
+      </h3>
+    </div>
+    <div class="panel-body">
+      <div class="col-md-6 column">
+        edge log:
+        <pre id='edge_log'></pre>
+      </div>
+      <div class="col-md-6 column">
+        cloud log:
+        <pre id='cloud_log'></pre>
       </div>
     </div>
-    <div class="col-xs-6">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h3 class="panel-title">Subscribe MQTT Messages</h3>
-        </div>
-        <div class="panel-body">
-          <div class="col-xs-12">
-            <div class="row">
-              <div class="form-horizontal">
-                <div class="form-group">
-                  <label class="control-label col-xs-4">Topic:</label>
-                  <div class="col-xs-8">
-                    <input id="subscribe_topic" class="form-control">
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label class="control-label col-xs-4">Qos: </label>
-                  <div class="col-xs-8">
-                    <select id="subscribe_qos" class="form-control">
-                      <option value=0>0</option>
-                      <option value=1>1</option>
-                      <option value=2>2</option>
-                    </select>
-                  </div> 
-                </div>
-                <div class="form-group">
-                  <div class="col-xs-8 col-xs-offset-4">
-                    <button id="subscribe" class="btn btn-primary">Subscribe</button>
-                    <button id="unsubscribe" class="btn btn-default" style="display: none;" >Unsubscribe</button>
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label class="control-label col-xs-4">Messages:</label>
-                  <div class="col-xs-8">
-                    <textarea id="subscribe_messages" class="form-control" rows=10></textarea>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
 {% endblock %}
-
