--- a/mqtt_edge/templates/index.html
+++ b/mqtt_edge/templates/index.html
@@ -35,54 +35,86 @@
       var term_sn = $('#term_sn').val()
       var term_config = $('#term_config').val()
       $.post('/edge/term_sn', {'term_sn': term_sn, 'term_config': term_config}, function(res){
-		  edge_log(res)
+	    alert(res);
+		edge_log(res)
       })
     })
 
     $('#edge_register').click(function(event){
       var term_sn = $('#term_sn').val()
       $.post('/edge/register', {'term_sn': term_sn}, function(res){
+	      alert(res);
 		  edge_log(res)
       })
     })
     $('#edge_report').click(function(event){
       var term_sn = $('#term_sn').val()
-      $.post('/edge/report', {'term_sn': term_sn}, function(res){
-		  edge_log(res)
-      })
+	  $('#topic').val('video/cloudipcmgr/report')
+	  $('#message').val('{"time": 1564140943, "term_sn": "'+ term_sn +'", "data": [ { "name": "self", "alarms": [{"tag": "cpu","value": 99.2}] }, { "name": "pusher", "ip": "192.168.1.2", "alarms": [{"tag": "ram", "value": 4.2}] }, { "name": "pusher", "ip": "192.168.1.5", "alarms": [{"tag": "disk", "value": 3.3}] } ] ,"type": "alarm", "cmd": "report" }')
+	  $('#qos').val('1')
+	  $('#type').val('edge')
+    })
+
+    $('#publish').click(function(event){
+      var term_sn = $('#term_sn').val()
+      var topic = $('#topic').val()
+      var message = $('#message').val()
+      var qos = $('#qos').val()
+	  var type = $('#type').val();
+		if (type ==='edge'){
+          $.post('/edge/publish', {
+	          'term_sn': term_sn, 'topic': topic,
+	          'message': message, 'qos': qos
+	      }, function(res){
+	          alert(res);
+	          edge_log(res)
+          })
+		} else {
+          $.post('/cloud/publish', {
+	          'term_sn': term_sn, 'topic': topic,
+	          'message': message, 'qos': qos
+	      }, function(res){
+	          alert(res);
+	          edge_log(res)
+          })
+		}
     })
 
     $('#cloud_start').click(function(event){
       $.get('/cloud/client', function(res){
+	      alert(res);
 		  cloud_log(res)
       })
     })
 
     $('#cloud_add_edge').click(function(event){
-      var term_sn = $('#term_sn_new').val()
-      var term_config = $('#term_config_new').val()
+      var term_sn = $('#term_sn').val()
+      var term_config = $('#term_config').val()
       $.post('/cloud/term_sn', {'term_sn': term_sn, 'config': term_config}, function(res){
+	      alert(res);
 		  cloud_log(res)
       })
     })
 
     $('#cloud_delete_edge').click(function(event){
-      var term_sn = $('#term_sn_new').val()
+      var term_sn = $('#term_sn').val()
 		$.ajax({
 		  url: '/cloud/term_sn',
 		  type: 'DELETE',
 		  data: {'term_sn': term_sn},
 			success: function(res){
+				alert(res);
 				cloud_log(res)
 			}
 		});
     })
 
     $('#cloud_cmd').click(function(event){
-      var term_sn = $('#term_sn_new').val()
-      $.post('/cloud/cmd', {'term_sn': term_sn}, function(res){
-		  cloud_log(res)
-      })
+      var term_sn = $('#term_sn').val()
+	  $('#topic').val('video/edgeipcmr/' + term_sn)
+	  $('#message').val('{"time": 1564140943, "data": [{"max_duration": 0, "pusher": "192.168.1.2", "ipc": "192.168.1.110"}], "type": "stop", "cmd": "rt_stream"}')
+	  $('#qos').val('1')
+	  $('#type').val('cloud')
     })
 
   });
@@ -111,35 +143,48 @@
 	    <div class='form-inline'>
 		  <div class="form-group">
 			<label for="host"> Broker Host: </label>
-			<input type="text" class="form-control" id="host">
+			<input type="text" class="form-control" id="host" placeholder="127.0.0.1">
 			<label for="port"> Broker Port: </label>
-			<input type="text" class="form-control" id="port">
+			<input type="text" class="form-control" id="port" placeholder="1883">
 			<label for="sqlite"> edge SQLite </label>
-			<input type="text" class="form-control" id="sqlite">
+			<input type="text" class="form-control" id="sqlite" placeholder="./sqlite.db">
 		  </div>
 		  <div class="form-group">
 			<button id="config" class="btn btn-primary">设置</button>
+            <button id="cloud_start" class="btn btn-primary">启动云端</button>
 		  </div>
 		</div>
     </div>
 </div>
+
 <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title">
-        edge操作
+        操作
       </h3>
     </div>
     <div class="panel-body">
       <div class="form-group">
         <label for="term_sn"> term_sn: </label>
-        <input type="text" class="form-control" id="term_sn">
+        <input type="text" class="form-control" id="term_sn" value='MG51T-09-S05-1204'>
         <label for="term_config"> term_config: </label>
-        <input type="text" class="form-control" id="term_config">
+	    <input type="text" class="form-control" id="term_config" value='{"ml": [{"features": [1, 2, 4], "ip": "192.168.1.3", "ipcs": ["192.168.1.110", "192.168.1.111"]  }], "pusher": [{"ip": "192.168.1.2", "ipcs": ["192.168.1.110", "192.168.1.111"], "status": [1, 0]}]}'>
       </div>
-      <div class="form-group">
-        <button id="edge_create" class="btn btn-primary">启动edge设备</button>
-        <button id="edge_register" class="btn btn-primary">edge设备注册</button>
-        <button id="edge_report" class="btn btn-primary">edge上报事件</button>
+      <div class="col-md-6 column">
+        <div class="form-group">
+		  edge设备：
+          <button id="edge_create" class="btn btn-primary">启动edge设备</button>
+          <button id="edge_register" class="btn btn-primary">edge设备注册</button>
+          <button id="edge_report" class="btn btn-primary">edge上报事件</button>
+        </div>
+      </div>
+      <div class="col-md-6 column">
+        <div class="form-group">
+		  cloud：
+          <button id="cloud_add_edge" class="btn btn-primary">添加edge设备到数据库</button>
+          <button id="cloud_delete_edge" class="btn btn-primary">删除edge设备</button>
+          <button id="cloud_cmd" class="btn btn-primary">云端下发指令</button>
+        </div>
       </div>
 
     </div>
@@ -148,23 +193,32 @@
 <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title">
-        cloud 操作
+		  消息
       </h3>
     </div>
     <div class="panel-body">
-      <div class="form-group">
-        <label for="term_sn_new"> term_sn: </label>
-        <input type="text" class="form-control" id="term_sn_new">
-        <label for="term_config_new"> term_config: </label>
-        <input type="text" class="form-control" id="term_config_new">
-      </div>
-      <div class="form-group">
-        <button id="cloud_start" class="btn btn-primary">启动云端</button>
-        <button id="cloud_add_edge" class="btn btn-primary">添加edge设备到数据库</button>
-        <button id="cloud_delete_edge" class="btn btn-primary">删除edge设备</button>
-        <button id="cloud_cmd" class="btn btn-primary">云端下发指令</button>
-      </div>
-
+	  <div class="form-group">
+	    <label for="topic"> 主题 </label>
+	 	  <input type="text" class="form-control" id="topic">
+	 	</div>
+	 	<div class="form-group">
+	 	  <label for="message"> 消息 </label>
+	 	  <input type="text" class="form-control" id="message">
+	 	</div>
+	    <div class='form-inline'>
+	 	  <div class="form-group">
+	 	    <label for="qos"> 服务质量(qos) </label>
+	 	    <select class="form-control" id='qos'>
+	 	      <option value='1'>1</option>
+	 	      <option value='0'>0</option>
+	 	      <option value='2'>2</option>
+	 	    </select>
+	 	  </div>
+	 	  <div class="form-group">
+			<input type='text' style='display:none;' id='type'>
+	 	    <button id="publish" class="btn btn-primary">发送</button>
+	 	  </div>
+	  </div>
     </div>
 </div>
 
