设备启动后完成注册，注册失败后重新注册

--- a/mqtt_edge/templates/index.html
+++ b/mqtt_edge/templates/index.html
@@ -174,7 +174,7 @@
         <div class="form-group">
 		  edge设备：
           <button id="edge_create" class="btn btn-primary">启动edge设备</button>
-          <button id="edge_register" class="btn btn-primary">edge设备注册</button>
+		  <!--<button id="edge_register" class="btn btn-primary">edge设备注册</button>-->
           <button id="edge_report" class="btn btn-primary">edge上报事件</button>
         </div>
       </div>
